--- a/package.json
+++ b/package.json
@@ -6,17 +6,22 @@
     "author": "victor de souza magaldi <victmagaldi@hotmail.com>",
     "license": "MIT",
     "scripts": {
-        "format":"prettier src/* --write",
+        "format": "prettier src/* --write",
         "dev": "npx nodemon -e ts,json,ejs src/server.ts"
     },
     "dependencies": {
+        "bcrypt": "^5.0.1",
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
         "global": "^4.4.0",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^6.5.0",
         "typescript": "^4.7.4"
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
         "@types/express": "^4.17.13",
+        "@types/jsonwebtoken": "^8.5.8",
         "@types/node": "^18.0.3",
         "nodemon": "^2.0.19",
         "prettier": "2.7.1",
