--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "dev": "npx nodemon -e ts,json,ejs src/server.ts"
     },
     "dependencies": {
+        "@types/node-localstorage": "^1.3.0",
         "@types/redis": "^4.0.11",
         "bcrypt": "^5.0.1",
         "dotenv": "^16.0.1",
@@ -17,6 +18,7 @@
         "global": "^4.4.0",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.5.0",
+        "node-localstorage": "^2.2.1",
         "redis": "^4.3.0",
         "typescript": "^4.7.4"
     },
